mine/css/page/material.css
/* ... */
@media only screen and (max-width: 768px) {
	.page-material.banner {height:30vh;}
	.page-material #album div.prev {transform: translateY(12%) translateX(-50%);}
	.page-material #album div.next {transform: translateY(12%) translateX(-50%);left: 70%;}
	.page-material #albumContainer .buttons {min-width: calc( calc(100vh * 0.375) + 75px );left: calc( 50% - calc( calc(100vh * 0.2) + 25px) );top: calc( calc(100vh * 0.215) - 25px );}
	.page-material #albumContainer #nextBtn {margin-left: calc( calc(100vh * 0.4) - 20px );}

	.page-material #album div.prevLeftSecond {transform: translateY( calc(50vh * 0.2) ) translateX( calc(50vh * -0.24) );}
	.page-material #album div.nextRightSecond {transform: translateY( calc(50vh * 0.2) ) translateX( calc(50vh * -0.15) );}

}

/* ==============================
   Phone
   ============================== */
  
@media only screen and (max-width: 480px) {

	.page-material.container.blank {padding:35px 25px 25px;}

	.page-material h2.subTitle {font-size:18px;}

	/* album */
	.page-material #albumContainer {width:100%;}
	.page-material #album {height: calc(100vw * 0.5);}

	/* 1 */
	.page-material #album div.selected {transform: translateY(0px) translateX( calc(50vh * -0.285) );}
	.page-material #album div img {width: calc(100vw * 0.5);}

	/* 2 */
	.page-material #album div.prev {transform: translateY(22%) translateX(-50%);}
	.page-material #album div.next {transform: translateY(22%) translateX(-50%);}
	.page-material #album div.prev img {width: calc(100vw * 0.35);}
	.page-material #album div.next img {width: calc(100vw * 0.35);}


	/* 3 */
	.page-material #album div.prevLeftSecond {transform: translateY( calc(50vh * 0.15) ) translateX( calc(50vh * -0.18) );}
	.page-material #album div.nextRightSecond {transform: translateY( calc(50vh * 0.15) ) translateX( calc(50vh * -0.095) );}
	.page-material #album div.nextRightSecond img {width: calc(100vw * 0.25);}
	.page-material #album div.prevLeftSecond img {width: calc(100vw * 0.25);}

	/* button */
	.page-material #albumContainer .buttons {
		min-width: calc( calc(100vh * 0.25) + 55px );
		left: calc( 50% - calc( calc(100vh * 0.125) + 25px) );
		top: calc( calc(100vw * 0.25) - 15px );
	}
	.page-material #albumContainer #nextBtn {margin-left: calc( calc(100vh * 0.3) - 46px );} 




	.page-material #displayResult {width:100%;}
	.page-material #displayResult .item {margin:5px 8px;font-size:14px;}

	.page-material .recommandLabel{margin:20px -25px}
	.page-material .recommandLink {margin:10px 25px;font-size:14px}

	/* filter Popup */
	#filterPopup.page-material .container {width:90%;max-height:calc( calc(100vh * 0.9) + -10px );}
	#filterPopup.page-material .closePopup {padding-right:20px;}

	#filterPopup.page-material h2.popupTitle {padding:10px 20px;padding-top:40px;font-size:18px;}
	#filterPopup.page-material .searchBar {margin-bottom:8px;padding:10px 20px;font-size:15px;}

	#filterPopup.page-material .searchOption {padding:10px 20px;font-size:16px}
		#filterPopup.page-material .searchOption .choosen {font-size:13px}
		#filterPopup.page-material .searchOption .colorSquare.active {width:20px;height:20px;}
	#filterPopup.page-material .unfoldSelectionZone  {padding:30px 20px;}
	#filterPopup.page-material .foldSelectionZone  {padding:0px 20px;}

	.zoneArrow >img {width:18px}

	/* Color Square */
	.page-material .colorSquare {
		display:inline-block;
		position:relative;
		vertical-align:-webkit-baseline-middle;
		width:33px;height:32px;
		margin:8px -2px;
		border:2px solid #fff;
		border-left-width:2px;
		border-right-width:2px;
	}
	.page-material .colorSquare.active {width:42px;height:42px;border:2px solid #fff;margin-right:0}
	.page-material .colorSquare.last {border-right-width:2px}


	/* mineType */
	.page-material .mineType {display:inline-block;margin:8px 10px;padding:8px 15px;font-size:14px;position:relative;border:2px solid transparent;color:#6A3906;cursor:pointer;}


	/* meanType */
	.page-material .meanType {display:inline-block;margin:10px 12px;padding:12px 15px;font-size:14px;position:relative;border:3px solid transparent;color:#6A3906;cursor:pointer;}
	.page-material .mean {font-size:16px}
	.page-material .mean>img {width:32px;}

}

@media only screen and (height: 812px) {

	.page-material #album div.selected {transform: translateY(0px) translateX( calc(50vh * -0.23) );}

	.page-material #album div.nextRightSecond {transform: translateY( calc(50vh * 0.135) ) translateX( calc(50vh * -0.075) );}

	.page-material #albumContainer .buttons {min-width: calc( calc(100vh * 0.25) + 15px );left: calc( 50% - calc( calc(100vh * 0.125) + 5px) );}
	.page-material #albumContainer #nextBtn {margin-left: calc( calc(100vh * 0.25) - 47px );}
}

